// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> overrides the theming props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  text-transform: uppercase;
  font-size: 0.75rem;
  border-radius: 0.125rem;
  font-weight: 700;
  color: #D53F8C;
  box-shadow: inset 0 0 0px 1px #D53F8C;
}

<span
    class="chakra-badge emotion-0"
  >
    Badge
  </span>
</DocumentFragment>
`;

exports[`<Badge /> renders with default theming 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  text-transform: uppercase;
  font-size: 0.75rem;
  border-radius: 0.125rem;
  font-weight: 700;
  background: #EDF2F7;
  color: #1A202C;
}

<span
    class="chakra-badge emotion-0"
  >
    Badge
  </span>
</DocumentFragment>
`;

exports[`<Box /> as - prop works correctly 1`] = `
<DocumentFragment>
  <a
    class="css-0"
    href="www.google.com"
  >
    This is box
  </a>
</DocumentFragment>
`;

exports[`<Box /> renders box correctly 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  >
    This is box
  </div>
</DocumentFragment>
`;

exports[`<Flex /> renders all the allowed shorthand style props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
